<resources>
    <string name="app_name">All Apps Tools</string>
    <string name="nav_header_title">Vishnu kumar</string>
    <string name="nav_header_subtitle">vishnugrkumar@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_music">Music</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_video">Videos</string>
    <string name="menu_recycler">RecyclerView</string>
    <string name="latest">Coming Soon</string>
    <string name="app_name_web">WebService</string>
    <string name="name">Name : </string>
    <string name="id">Employee ID : </string>
    <string name="age">AGE :</string>
    <string name="salary">SALARY : </string>
    <string name="uploadId">UPLOAD_ID : </string>
    <string name="type">CONTENT_TYPE : </string>
    <string name="path">DOWNLOAD_PATH : </string>
    <string name="size">SIZE : </string>
    <string name="checksum">CHECKSUM : </string>
    <string name="display_name">DISPLAY_NAME : </string>
    <string name="characterName">CHARACTER NAME : </string>
    <string name="realName">REAL NAME : </string>
    <string name="team">TEAM : </string>
    <string name="firstAppearance">FIRST APPEARANCE : </string>
    <string name="createdBy">CREATED BY : </string>
    <string name="publisher">PUBLISHER : </string>
    <string name="imageurl">IMAGE : </string>
    <string name="bio">DESCRIPTION : </string>
    <string name="menu_splitwise">splitwise</string>
    <string name="app_name_Split">splitwise</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="add_new_item">Add new Item</string>
    <string name="nav_home">View Item</string>
    <string name="nav_new_tab">Add New Item</string>
    <string-array name="nav_item_split_wise">
        <item>Home</item>
        <item>View Item</item>
        <item>Add New Item</item>
        <item>Add new List</item>
    </string-array>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="item_name">Item Name : </string>
    <string name="amount">Amount : </string>
    <string name="date">Date</string>
    <string name="submit">SUBMIT</string>
    <string name="add_items">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_new_list">Add New List</string>
    <string name="main">HOME</string>
    <string name="add_new_title">Add New Title</string>
    <string name="enter_the_category">Enter the Category</string>
    <string name="setdate">setDate</string>
    <string name="use_demo_mode">use demo mode</string>
    <string name="total_amount">Total Amount :</string>
    <string name="menu_all_package">all package</string>
    <string name="menu_remote">Remote</string>
    <string name="menu_event_recorder">Event Recoder</string>
    <string name="demonuts_id">ID : </string>
    <string name="city">City :</string>
    <string name="country">Country :</string>
    <string name="spent_amount">Spent Total Amount</string>
    <string name="all_details">Total Amount : 0</string>
    <string name="file_name">File Name</string>
    <string name="location">Location</string>
    <string name="file_size">File Size</string>
    <string name="last_modified">Last Modified</string>
    <string name="enter_new_file_name">Enter new file name="" </string>
    <string name="type_here">Type Here</string>
    <string name="close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_home">Internal storage</string>
    <string name="nav_item_friends">External storage</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
    </string-array>
    <string name="title_external">External</string>
    <string name="title_internal">Internal</string>
    <string name="action_save">Save</string>
    <string name="action_delete">delete</string>
    <string name="action_add_folder">new folder</string>
    <string name="action_add_file">new file</string>
    <string name="action_change_text_size">Font size</string>
    <string name="action_change_text_color">Text color</string>
    <string name="action_change_background_color">Theme</string>
    <string name="lbl_property">Property</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_new_folder">New folder</string>
    <string name="lbl_new_file">New file</string>
    <string name="lbl_select_all">Select all</string>
    <string name="lbl_de_select_all">Deselect all</string>
    <string name="lbl_copy_here">Copy selection here</string>
    <string name="lbl_move_here">Move selection here</string>
    <string name="lbl_delete_selection">Delete selection</string>
    <string name="lbl_add_bookmark">Add  bookmark</string>
    <string name="lbl_rename_file">Rename</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_audios">Audios</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_images">Images</string>
    <string name="lbl_internal_storage">Internal storage</string>
    <string name="lbl_external_storage">SD storage</string>
    <string name="lbl_ram">RAM</string>
    <string name="btn_lbl_create">Create</string>
    <string name="btn_lbl_cancel">Cancel</string>
    <string name="btn_lbl_okay">OK</string>
    <string name="btn_lbl_rename">Rename</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="lbl_title_rename_folder">Rename Folder</string>
    <string name="lbl_title_rename_file">Rename File</string>
    <string name="msg_prompt_delete_folder">Are you sure you want delete #name="" # folder?</string>
    <string name="msg_prompt_delete_folders">Are you sure you want delete selected folders?</string>
    <string name="msg_prompt_unzip_folder">Are you sure you want to unzip folder</string>
    <string name="msg_prompt_save_text_file">Are you sure you want to save file</string>
    <string name="msg_prompt_file_created">File created.</string>
    <string name="msg_prompt_file_not_created">File not created..!</string>
    <string name="msg_prompt_file_already_exits">File already exits</string>
    <string name="msg_prompt_folder_created">Folder created.</string>
    <string name="msg_prompt_folder_not_created">Folder not created ..!</string>
    <string name="msg_prompt_folder_already_exits">Folder already exits</string>
    <string name="msg_prompt_not_renamed">Fail to renamed ..!</string>
    <string name="msg_prompt_renamed">Successfully renamed.</string>
    <string name="msg_prompt_name_already_exits">Name already exits</string>
    <string-array name="nav_item_activity_titles">
        <item>Storage 0</item>
        <item>Storage 1</item>
        <item>Images</item>
        <item>Audios</item>
        <item>Videos</item>
        <item>Settings</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="images">Images</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="no_media_found">No files</string>
    <string name="lock">Lock</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="filemanager_lite">Filemanager Lite</string>
    <string name="turn_on">Turn on</string>
    <string name="storage_permission_is_required">Storage permission is required</string>
    <string name="cant_s_access_files">Cant\'s access files</string>
    <string name="new_folder">new folder</string>
    <string name="lbl_search">search</string>
    <string name="show_hidden_file">Show hidden file</string>
    <string name="create_folder">Create Folder</string>
    <string name="hint_lbl_new_folder">New Folder</string>
    <string name="create_file">Create File</string>
    <string name="hint_lbl_new_file">New File</string>
    <string name="lbl_rename">Rename</string>
    <string name="file_details">File details</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="ram">RAM</string>
    <string name="free_space">Free space</string>
    <string name="free">Free</string>
    <string name="lbl_delete_single_file">Are you sure to delete this file?</string>
    <string name="lbl_delete_multiple_files">"Are you sure you want to delete the selected files?"</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="version">Version 2.1</string>
    <string name="insert_sd_card">Insert SD Card</string>
    <string name="extract">Extract</string>
    <string name="navigation">Navigation</string>
    <string name="create_file_folder">Create file/folder</string>
    <string name="explore_options_and_settings">Explore options and settings</string>
    <string name="long_press">Long press</string>
    <string name="select_folder_or_file">Select folder or file</string>
    <string name="copy_delete_folder_or_file">Copy/Delete folder or file</string>
    <string name="choose_menu_options">Choose menu options</string>
    <string name="menu">Menu</string>
    <string name="copy">Copy</string>
    <string name="lbl_move">move</string>
    <string name="banner_home_footer">ca-app-pub-5081856790359576/9410706049</string>
    <string name="interstitial_full_screen">ca-app-pub-5081856790359576/2461018845</string>
    <string name="file_manager">File Manager</string>
    <string name="enter_the_new_folder_name">Enter the New Folder Name : </string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="start">Start Now</string>
    <string name="slide_1_title">Just Here!</string>
    <string name="slide_1_desc">The easiest way to keep in touch with your Friends!</string>
    <string name="slide_2_title">Lots of Sticker</string>
    <string name="slide_2_desc">Sticker is best way then long text!</string>
    <string name="slide_3_title">Group Discussion</string>
    <string name="slide_3_desc">Make group of best buddies and have fun!</string>
    <string name="home_title">Welcome to Application</string>
    <string name="home_desc">make friends and have fun.</string>
    <string name="audioAppName">Audio Gallery</string>
    <string name="app_name_chess">JustChess</string>
    <string name="title_activity_intro">JustChess</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_about">About JustChess</string>
    <string name="title_activity_settings">Settings</string>
</resources>