<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp">
    <LinearLayout
        android:id="@id/currentData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableLayout
            android:visibility="gone"
            android:id="@+id/marvelViewTabLayout"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/characterName"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/characterName"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/realName"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/realName"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/team"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/team"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/firstAppearance"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/firstAppearance"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/createdBy"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/createdBy"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/publisher"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/publisher"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/bio"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/bio"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow >
                <ImageView
                    android:layout_span="2"
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/demoNutsTableLayout"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/demonuts_id"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/demoId"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/name"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/demoName"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/city"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/city"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o"
                    android:text="@string/country"
                    android:textColor="@color/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:autoSizeTextType="uniform"
                tools:targetApi="o" android:id="@+id/country"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow >
                <ImageView
                    android:layout_span="2"
                    android:id="@+id/imageViewDemo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>